--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,3 +13,17 @@
   .logo {
     width: 8rem;
   }
+
+
+  .session-card{
+    padding: 6rem 3rem;
+    text-align: center;
+  }
+
+  #session-time {
+    text-align: center;
+    margin: 0 auto;
+    font-size: 2rem;
+    font-weight: 700;
+    padding-bottom: 1rem;
+  }
