--- a/templates/plans/workout_delete.html
+++ b/templates/plans/workout_delete.html
@@ -1,16 +1,16 @@
 {% extends "_base.html" %}
 {% block title %}
-  Delete Session
+  Delete Workout
 {% endblock title %}
 {% block content %}
   <article>
     <h2>
-      Are you sure you want to delete this session?
+      Are you sure you want to delete this workout?
     </h2>
-    <form action="{% url 'plans:delete' session.id %}" method="post">
+    <form action="{% url 'plans:workout_delete' workout.id %}" method="post">
       {% csrf_token %}
       <input type="submit" value="Delete">
-      <a href="{% url 'plans:detail' session.id %}">Cancel</a>
+      <a href="{% url 'plans:detail' workout.session.id %}">Cancel</a>
     </form>
   </article>
 {% endblock %}
