--- a/templates/plans/workout_update.html
+++ b/templates/plans/workout_update.html
@@ -1,12 +1,12 @@
 {% extends "_base.html" %}
 {% block title %}
-  Add Workout
+  Update Workout
 {% endblock title %}
 {% block content %}
   <h2>Add Workout</h2>
-  <form action="{% url 'plans:workout_create' parent_session %}" method="post">
+  <form action="{% url 'plans:workout_update' workout.id %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Create">
+    <input type="submit" value="Update">
   </form>
 {% endblock %}
