--- a/templates/_base.html
+++ b/templates/_base.html
@@ -18,6 +18,8 @@
         Spotter
         {% endblock title %}
     </title>
+    {% block scripts %}
+    {% endblock scripts %}
   </head>
   <body>
     <header class="container">
